# sds

./: .env  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  collectors.json  config.json  docker-compose.override.yml  docker-compose.tests.yml  docker-compose.yml  pyproject.toml  setup.cfg  sonar-project.properties
app/: environment-to-freeze.yml  environment.yml
app/collector/: __init__.py  api.py  async_subscription.py  collector.py  collector_manager.py  collector_status.py  config.py  dataset.py  epics_event.py  event.py  indexable_dataset.py  main.py
app/common/: config.py  elastic_test.sh  es_pwd.sh
app/indexer/: __init__.py  indexer.py
app/retriever/: __init__.py  memory_nexus.py  retriever.py  schemas.py
collector/: Dockerfile  environment.yml  requirements.txt
collector/app/: collector.py  event.py  (+7 more)
common/: elastic.py
doc/: README.md  SDS.epgz  collector-epics.dotuml  collector-timeout.dotuml  collector.dotuml  collector.md  indexer.md  retriever.md  sds.pptx  storage.md
indexer/: Dockerfile  config.py  docker-compose.yml  elastic.py  environment-to-freeze.yml  environment.yml  indexer.py  init_db.py
retriever/: Dockerfile  config.py  environment-to-freeze.yml  environment.yml  memory_nexus.py  retriever.py
src/: environment-to-freeze.yml  environment.yml  pytest.ini
storage/: Dockerfile  docker-compose.yml  elastic.py  environment-to-freeze.yml  environment.yml  storage.py
test_ioc/: ntndarraywithevent.py  ntscalararraysds.py  pva_server.py
tests/: .coveragerc  Dockerfile  collectors.json
(+118 files in other folders)
