[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "SDS"
authors = [
    {name = "Juan F. Esteban Müller", email = "JuanF.EstebanMuller@ess.eu"},
]
description = "Synchronous Data Service"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
dependencies = [
        "aiofiles",
        "aiohttp",
        "elasticsearch",
        "fastapi",
        "uvicorn",
        "p4p",
        "numpy",
        "h5py",
        "datetime",
        "requests",
]
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "src/_version.py"
